--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
     <title>FizzBuzz</title>
     <!-- BOOTSTRAP CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <!-- CUSTOM CSS -->
+    <link rel="stylesheet" href="./asset/css/style.css">
 </head>
 <body>
+    <h1 class="text-white text-center py-3">FizzBuzzDOM</h1>
     <div class="container"> 
-            <div id="rowId" class="row row-cols-7">
+            <div id="rowId" class="row">
 
             </div>
     </div>
